--- a/paginas/adopcion.html
+++ b/paginas/adopcion.html
@@ -15,18 +15,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <!-- TITULO DE LA PAGINA -->
-    <title>ADOPCION</title>
     <!-- LOGO DE PESTAÑA -->
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
-
+    <!-- ANIMACION HEADER -->
+    <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- TITULO DE LA PAGINA -->
+    <title>ADOPCION</title>
 </head>
 
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
 <body>
 
-    <header>
+    <header class="animate__animated animate__backInLeft">
         <div class="logo">
             <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
             <h1 class="encabezado"><a href="index.html">ADOPTAME</a></h1>
@@ -49,8 +50,7 @@
         <section class="perrosAdopcion">
 
             <article>
-                <div>
-
+                <div> 
                     <img src="../multimedia/pexels-kat-smith-551628.jpg" alt="perro1" class="PerroImagen">
                 </div>
                 <div>
@@ -58,7 +58,6 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, optio blanditiis enim
                         voluptates dicta omnis, ipsam ad eos odio cumque natus, eum nisi impedit pariatur reprehenderit
                         alias aliquid dolorem velit.
-
                     </p>
                 </div>
             </article>
@@ -72,7 +71,6 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati perferendis quo molestias
                         explicabo voluptatum cum illum eligendi adipisci nisi inventore quis rerum tempora quam mollitia
                         nobis ut doloremque, ex numquam!
-
                     </p>
                 </div>
             </article>
