--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -16,16 +16,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <!-- TITULO DE LA PAGINA -->
-    <title>PREGUNTASFRECUENTES</title>
     <!-- LOGO DE PESTAÑA -->
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
-
+    <!-- ANIMACION HEADER -->
+    <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- TITULO DE LA PAGINA -->
+    <title>PREGUNTASFRECUENTES</title>
 </head>
 <!-- TODO EL CONTENIDO DEL SITIO -->
 <body>
     
-    <header>
+    <header class="animate__animated animate__backInLeft">
         <div class="logo">
             <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
             <h1 class="encabezado"><a href="index.html">ADOPTAME</a></h1>
