--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -10,8 +10,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- APTACION A CELULAR -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--llamar ccs  -->
-    <link rel="stylesheet" href="../estilos/estilos.css">
     <!-- ESTILO DE LETRA ENCABEZADO-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +18,10 @@
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
     <!-- ANIMACION HEADER -->
     <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- BOOTSTRAP LINK-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--llamar ccs  -->
+    <link rel="stylesheet" href="../estilos/estilos.css">
     <!-- TITULO DE LA PAGINA -->
     <title>CONTACTO</title>
 </head>
@@ -32,56 +34,85 @@
     <header class="animate__animated animate__backInLeft">
         <div class="logo">
             <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="index.html">ADOPTAME</a></h1>
+            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
         </div>
 
-        <nav class="menuPrincipal">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./adopcion.html">Adopcion</a></li>
-                <li><a href="./preguntas frecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+        <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/adopcion.html">Adopcion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/preguntas frecuentes.html">Preguntas
+                            Frecuentes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-
-
     </header>
-    <main>
-        <form>
-            <label for="NOMBRE">NOMBRE: </label>
-            <input type="text" placeholder="INGRESE SU NOMBRE" name="NOMBRE">
+    <main class="mainContacto">
+        <form class="row g-3">
 
-            <label for="APELLIDO">APELLIDO: </label>
-            <input type="text" placeholder="INGRESES SU APELLIDO">
+            <div class="row g-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+                </div>
+              </div>
 
-            <label for="EMAIL">EMAIL: </label>
-            <input type="email" name="email" id="" placeholder="INGRESE SU EMAIL">
-
-            <label for="MENSAJE">MENSAJE:</label>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-
-            <label for="genero"> INDIQUE SU GENERO</label>
-            <input type="radio" value="FEMENINO" name="genero">FEMENINO
-            <input type="radio" value="MASCULINO" name="genero">MASCULINO
-
-            <input type="checkbox"> ACEPTO TERMINOS..
-
-            <select name="">
-                <option value="">argentina</option>
-                <option value="">brasil</option>
-                <option value="">chile</option>
-                <option value="">venezuela</option>
-            </select>
-
-
-
-            <input type="submit" value="Enviar">
-            <input type="reset" value="restablecer">
-            <input type="button" value="">
-
-
-
+            <div class="col-md-6">
+              <label for="inputEmail4" class="form-label">Email</label>
+              <input type="email" class="form-control" id="inputEmail4">
+            </div>
+            <div class="col-md-6">
+              <label for="inputPassword4" class="form-label">Password</label>
+              <input type="password" class="form-control" id="inputPassword4">
+            </div>
+            <div class="col-md-6">
+              <label for="inputCity" class="form-label">Ciudad</label>
+              <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="col-md-4">
+              <label for="inputState" class="form-label">Pais</label>
+              <select id="inputState" class="form-select">
+                <option selected>Seleccionar</option>
+                <option>Argentina</option>
+                <option>Chile</option>
+                <option>Peru</option>
+                <option>Venezuela</option>
+              </select>
+            </div>           
+            <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Acepto Terminos y Condiciones
+                </label>
+              </div>
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="reset" class="btn btn-primary">Restablecer</button>
+            </div>
         </form>
     </main>
     <footer>
@@ -94,6 +125,12 @@
             CUIDAMOS MASCOTAS
         </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
 
 </body>
 
