--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 
-
-
 <head>
     <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
     <meta charset="UTF-8">
@@ -10,8 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- APTACION A CELULAR -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--llamar ccs  -->
-    <link rel="stylesheet" href="../estilos/estilos.css">
     <!-- ESTILO DE LETRA ENCABEZADO-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,28 +15,54 @@
     <!-- LOGO DE PESTAÑA -->
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
     <!-- ANIMACION HEADER -->
-    <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- BOOTSTRAP LINK-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--llamar ccs  -->
+    <link rel="stylesheet" href="../estilos/estilos.css">
     <!-- TITULO DE LA PAGINA -->
-    <title>SERVICIOS</title>
+    <title>CONTACTO</title>
 
 </head>
 <!-- TODO EL CONTENIDO DEL SITIO -->
+
 <body>
 
     <header class="animate__animated animate__backInLeft">
         <div class="logo">
             <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="index.html">ADOPTAME</a></h1>
+            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
         </div>
 
-        <nav class="menuPrincipal">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./adopcion.html">Adopcion</a></li>
-                <li><a href="./preguntas frecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+        <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/adopcion.html">Adopcion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/preguntas frecuentes.html">Preguntas
+                                Frecuentes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../paginas/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
     </header>
@@ -49,9 +71,9 @@
         <div>
             <img src="../multimedia/perro-nieve-hoja.jpg" alt="imagen de nosotros" class="imagen3">
         </div>
-        
+
         <article>
-            <section class="textoNosotros">git
+            <section class="textoNosotros">
                 <div>
                     <h2 class="tituloNosotros"> ACERCA DE NOSOTROS</h2>
                 </div>
@@ -66,61 +88,56 @@
                         maravillosas.
                     </p>
                 </div>
-        </article>
 
-        <article>
-            <div>
-                <h2 class="tituloNosotros">MISION</h2>
-            </div>
-            <div>
-
-                <P class="textoNosotros1">
-                    Rescatar, curar, emparchar cuerpitos y almas y encontrarles los adopteros que se merecen.
-                </P>
-            </div>
-        </article>
-        
-        <article>
-            <div>
-
-                <h2 class="tituloNosotros">¿QUE BUSCAMOS?</h2>
-            </div>
-            <div>
-
-                <P class="textoNosotros1">
-                    Que cada uno de nuestros rescatados encuentre a su familia adoptera ideal, donde puedan recibir todo
-                    el
-                    amor
-                    y cuidado que merecen.
-                </P>
-            </div>
-        </article>
-
-        <article>
-            <div>
+                <div>
+                    <h2 class="tituloNosotros">MISION</h2>
+                </div>
                 <div>
 
-                    <h2 class="tituloNosotros">ATENCION VETERINARIA</h2>
+                    <P class="textoNosotros1">
+                        Rescatar, curar, emparchar cuerpitos y almas y encontrarles los adopteros que se merecen.
+                    </P>
                 </div>
-                <P class="textoNosotros1">
-                    Nuestros perritos rescatados reciben toda la atención veterinaria posible , vacunas, castración, lo
-                    que
-                    necesiten.
-                </P>
-            </div>
-        </article>
 
-        <article>
-            <div>
-                <h2 class="tituloNosotros">LO QUE MAS DESEAMOS</h2>
-            </div>
-            <div>
-                <P class="textoNosotros1">
-                    Es que algún día no seamos necesarios, ni nosotros ni ningún grupo, porque todos tengan su casa, con
-                    amor,
-                    respeto y para siempre.
-            </div>
-            </P>
+                <div>
+
+                    <h2 class="tituloNosotros">¿QUE BUSCAMOS?</h2>
+                </div>
+                <div>
+
+                    <P class="textoNosotros1">
+                        Que cada uno de nuestros rescatados encuentre a su familia adoptera ideal, donde puedan recibir
+                        todo
+                        el
+                        amor
+                        y cuidado que merecen.
+                    </P>
+                </div>
+
+                <div>
+                    <div>
+
+                        <h2 class="tituloNosotros">ATENCION VETERINARIA</h2>
+                    </div>
+                    <P class="textoNosotros1">
+                        Nuestros perritos rescatados reciben toda la atención veterinaria posible , vacunas, castración,
+                        lo
+                        que
+                        necesiten.
+                    </P>
+                </div>
+
+                <div>
+                    <h2 class="tituloNosotros">LO QUE MAS DESEAMOS</h2>
+                </div>
+                <div>
+                    <P class="textoNosotros1">
+                        Es que algún día no seamos necesarios, ni nosotros ni ningún grupo, porque todos tengan su casa,
+                        con
+                        amor,
+                        respeto y para siempre.
+                </div>
+                </P>
         </article>
         </section>
     </main>
@@ -136,6 +153,12 @@
             CUIDAMOS MASCOTAS
         </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
 
 </body>
 
