--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--llamar ccs  -->
     <link rel="stylesheet" href="./estilos/main.css">
+    <!--PALABRAS CLAVE -->
+    <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
+    <!--DESCRIPCION DEL SITIO-->
+    <meta name="description" content=" Vivimos para mejorar la vida de las mascostas abandonadas y a cambiar la vida de las personas sin mascotas">
     <!-- TITULO DE LA PAGINA -->
-    <title>PRINCIPAL</title>
+    <title>Adoptame</title>
 </head>
 
 <!-- TODO EL CONTENIDO DEL SITIO -->
