--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -20,9 +20,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--llamar ccs  -->
-  <link rel="stylesheet" href="/estilos/main.css">
+  <link rel="stylesheet" href="../estilos/main.css">
+  <!--PALABRAS CLAVE-->
+  <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
+  <!--DESCRIPCION DEL SITIO-->
+  <meta name="description" content=" Vivimos para mejorar la vida de las mascostas abandonadas, pongase en contacto con nosotros">
   <!-- TITULO DE LA PAGINA -->
-  <title>CONTACTO</title>
+  <title>Contacto</title>
 </head>
 
 <!-- TODO EL CONTENIDO DEL SITIO -->
