--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -21,9 +21,13 @@
     <!-- BOOTSTRAP LINK-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--llamar ccs  -->
-    <link rel="stylesheet" href="/estilos/main.css">
+    <link rel="stylesheet" href="../estilos/main.css">
+    <!--PALABRAS CLAVE-->
+    <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
+    <!--DESCRIPCION DEL SITIO-->
+    <meta name="description" content=" Vivimos para mejorar la vida de las mascostas abandonadas y haga sus preguntas y le daremos una respuesta">
     <!-- TITULO DE LA PAGINA -->
-    <title>PREGUNTASFRECUENTES</title>
+    <title>Preguntas Frecuentes</title>
 </head>
 <!-- TODO EL CONTENIDO DEL SITIO -->
 <body>
