--- a/index.html
+++ b/index.html
@@ -34,41 +34,40 @@
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
 <body>    
-    <header class="animate__animated animate__backInLeft">
-        <div class="logo">
-            <img src="./multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+      <header class="animate__animated animate__backInLeft">
+        <div class="logo">          
+            <a href="../index.html">
+            <img  src="./multimedia/glow.png" alt="logo-pagina"></a>
         </div>
     
-    <nav  class="menuPrincipal navbar navbar-expand-md navbar-light">
-        <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="./paginas/adopcion.html">Adopcion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="./paginas/preguntas frecuentes.html">Preguntas
-                            Frecuentes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="./paginas/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="./paginas/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
+        <nav  class="menuPrincipal navbar navbar-expand-md navbar-light">
+            <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./paginas/adopcion.html">Adopcion</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./paginas/preguntas frecuentes.html">Preguntas Frecuentes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./paginas/nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./paginas/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
     </header>
 
