--- a/paginas/adopcion.html
+++ b/paginas/adopcion.html
@@ -26,7 +26,7 @@
   <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
   <!--DESCRIPCION DEL SITIO-->
   <meta name="description"
-  content=" Vivimos para mejorar la vida de las mascostas abandonadas y adopte una mascota y salve una vida">
+    content=" Vivimos para mejorar la vida de las mascostas abandonadas y adopte una mascota y salve una vida">
   <!-- TITULO DE LA PAGINA -->
   <title>Adopcion</title>
 </head>
@@ -37,8 +37,8 @@
 
   <header class="animate__animated animate__backInLeft">
     <div class="logo">
-      <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-      <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+      <a href="../index.html">
+        <img src="/multimedia/glow.png" alt="logo-pagina"></a>
     </div>
 
     <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
