--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -24,7 +24,8 @@
   <!--PALABRAS CLAVE-->
   <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
   <!--DESCRIPCION DEL SITIO-->
-  <meta name="description" content=" Vivimos para mejorar la vida de las mascostas abandonadas, pongase en contacto con nosotros">
+  <meta name="description"
+    content=" Vivimos para mejorar la vida de las mascostas abandonadas, pongase en contacto con nosotros">
   <!-- TITULO DE LA PAGINA -->
   <title>Contacto</title>
 </head>
@@ -36,8 +37,8 @@
 
   <header class="animate__animated animate__backInLeft">
     <div class="logo">
-      <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-      <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+      <a href="../index.html">
+        <img src="/multimedia/glow.png" alt="logo-pagina"></a>
     </div>
 
     <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
@@ -98,11 +99,11 @@
               Acepto Terminos y Condiciones
             </label>
           </div>
-            <div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
-              <button type="reset" class="btn btn-primary">Restablecer</button>
-            </div>
+          <div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="reset" class="btn btn-primary">Restablecer</button>
           </div>
+        </div>
     </form>
   </main>
   <footer>
