--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -24,7 +24,8 @@
     <!--PALABRAS CLAVE-->
     <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
     <!--DESCRIPCION DEL SITIO-->
-    <meta name="description" content=" Vivimos para mejorar la vida de las mascostas abandonadas y aca encontrara la informacion de nosotros">
+    <meta name="description"
+        content=" Vivimos para mejorar la vida de las mascostas abandonadas y aca encontrara la informacion de nosotros">
     <!-- TITULO DE LA PAGINA -->
     <title>Nosotros</title>
 
@@ -34,9 +35,9 @@
 <body>
 
     <header class="animate__animated animate__backInLeft">
-        <div class="logo"> 
-            <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="/multimedia/glow.png" alt="logo-pagina"></a>
         </div>
 
         <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
@@ -158,11 +159,11 @@
         </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 
 </body>
 
