--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -17,25 +17,28 @@
     <!-- LOGO DE PESTAÑA -->
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
     <!-- ANIMACION HEADER -->
-    <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- BOOTSTRAP LINK-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--llamar ccs  -->
     <link rel="stylesheet" href="../estilos/main.css">
     <!--PALABRAS CLAVE-->
     <meta name="keywords" content="adoptame, adopcion, perro, gato, mascota">
     <!--DESCRIPCION DEL SITIO-->
-    <meta name="description" content=" Vivimos para mejorar la vida de las mascostas abandonadas y haga sus preguntas y le daremos una respuesta">
+    <meta name="description"
+        content=" Vivimos para mejorar la vida de las mascostas abandonadas y haga sus preguntas y le daremos una respuesta">
     <!-- TITULO DE LA PAGINA -->
     <title>Preguntas Frecuentes</title>
 </head>
 <!-- TODO EL CONTENIDO DEL SITIO -->
+
 <body>
-    
+
     <header class="animate__animated animate__backInLeft">
         <div class="logo">
-            <img src="../multimedia/LOGO DE PAGINA.png" alt="logo-pagina">
-            <h1 class="encabezado"><a href="../index.html">ADOPTAME</a></h1>
+            <a href="../index.html">
+                <img src="/multimedia/glow.png" alt="logo-pagina"></a>
         </div>
         <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
@@ -54,7 +57,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="../preguntas frecuentes.html">Preguntas
-                            Frecuentes</a>
+                                Frecuentes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="../paginas/nosotros.html">Nosotros</a>
@@ -134,11 +137,11 @@
         </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 
 </body>
 
