--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -37,7 +37,7 @@
     <header class="animate__animated animate__backInLeft">
         <div class="logo">
             <a href="../index.html">
-                <img src="/multimedia/glow.png" alt="logo-pagina"></a>
+                <img src="../multimedia/glow.png" alt="logo-pagina"></a>
         </div>
 
         <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
