--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
 <body>    
-      <header class="animate__animated animate__backInLeft">
+    <header class="animate__animated animate__backInLeft">
         <div class="logo">          
             <a href="../index.html">
-            <img  src="multimedia/glow.png" alt="logo-pagina"></a>
+            <img  src="./multimedia/glow.png" alt="logo-pagina"></a>
         </div>
     
         <nav  class="menuPrincipal navbar navbar-expand-md navbar-light">
