--- a/paginas/adopcion.html
+++ b/paginas/adopcion.html
@@ -34,45 +34,37 @@
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
 <body>
-
-  <header class="animate__animated animate__backInLeft">
-    <div class="logo">
-      <a href="../index.html">
-        <img src="../multimedia/glow.png" alt="logo-pagina"></a>
+  <header class="container-fluid animate__animated animate__backInLeft">
+    <div class="container">
+        <div class="row">
+            <a href="../index.html">
+                <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
+        </div>
     </div>
 
-    <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./adopcion.html">Adopcion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./preguntas frecuentes.html">Preguntas
-                Frecuentes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+    <div class="row">
+        <nav class="navbar navbar-expand-md navbar-light">
+            <div class="navPd container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto">
+                        <a class="nav-link active mx-4" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active mx-4" href="../paginas/adopcion.html">Adopción</a>
+                        <a class="nav-link active mx-4" href="../paginas/preguntas frecuentes.html">Preguntas Frecuentes</a>
+                        <a class="nav-link active mx-4" href="../paginas/nosotros.html">Nosotros</a>
+                        <a class="nav-link active mx-4" href="../paginas/contacto.html">Contacto</a>
+                    </div>
+                </div>
+        </nav>
+    </div>
+</header>
 
-  <main class="container-fluid">
-    <section class="d-flex flex-wrap col-12 justify-content-center ">
+  <main class="container-fluid bg-black">
+    <section class="d-flex flex-wrap col-12 justify-content-center">
       <div class="card m-4" style="width: 18rem;">
         <img src="../multimedia/pexels-kat-smith-551628.jpg" class="card-img-top" alt="perro1">
         <div class="card-body bg-yellow">
@@ -80,29 +72,28 @@
           <p class="card-text">Corre Como Loco, Hermoso.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nombre: Rogelio</li>
-          <li class="list-group-item">Edad: Un Año</li>
-          <li class="list-group-item">Raza: Colin</li>
+          <li class="list-group-item"><strong>Nombre:</strong> Rogelio</li>
+          <li class="list-group-item"><strong>Edad:</strong> Un Año</li>
+          <li class="list-group-item"><strong>Raza:</strong> Colin</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">SOY TUYO</a>
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
 
       <div class="card m-4" style="width: 18rem;">
-        <img src="../multimedia/pexels-pixabay-160846.jpg" class="card-img-top" alt="perro2">
+        <img src="../multimedia/pexels-jens-mahnke-776078.jpg" class="card-img-top" alt="perro2">
         <div class="card-body">
           <h5 class="card-title">COKY</h5>
-          <p class="card-text">Energico, Atento, Un Gran Compañero.</p>
+          <p class="card-text">Energico, Atento, Gran Compañero.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nombre: Coky</li>
-          <li class="list-group-item">Edad: 6 Años</li>
-          <li class="list-group-item">Raza: Bull Dog Frances</li>
+          <li class="list-group-item"><strong>Nombre:</strong> Coky</li>
+          <li class="list-group-item"><strong>Edad:</strong> 6 Años</li>
+          <li class="list-group-item"><strong>Raza:</strong> Bull Dog Frances</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">SOY TUYO</a>
-
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
 
@@ -113,14 +104,15 @@
           <p class="card-text">Jugueton, Educado, Emable.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nombre: Firulais</li>
-          <li class="list-group-item">Edad: 3 Años</li>
-          <li class="list-group-item">Raza: Mestizo</li>
+          <li class="list-group-item"><strong>Nombre:</strong> Firulais</li>
+          <li class="list-group-item"><strong>Edad:</strong> 3 Años</li>
+          <li class="list-group-item"><strong>Raza:</strong> Mestizo</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">SOY TUYO</a>
-
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
+      </div>
+
       </div>
       <div class="card m-4" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-39317.jpg" class="card-img-top" alt="perro4">
@@ -129,52 +121,90 @@
           <p class="card-text">Un Nene hermoso.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nombre: Vertulio</li>
-          <li class="list-group-item">Edad: Un Mes</li>
-          <li class="list-group-item">Raza: Mestizo</li>
+          <li class="list-group-item"><strong>Nombre:</strong> Vertulio</li>
+          <li class="list-group-item"><strong>Edad:</strong> Un Mes</li>
+          <li class="list-group-item"><strong>Raza:</strong> Mestizo</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">SOY TUYO</a>
-
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
 
       <div class="card m-4" style="width: 18rem;">
-        <img src="../multimedia/pexels-pixabay-59965.jpg" class="card-img-top" alt="perro5">
+        <img src="../multimedia/pexels-glenn-2664417.jpg" class="card-img-top" alt="perro5">
         <div class="card-body">
           <h5 class="card-title">CODY</h5>
           <p class="card-text">Una Nena hermosa, Ronca. </p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nombre: Cody</li>
-          <li class="list-group-item">Edad: 2 meses</li>
-          <li class="list-group-item">Raza: Mestizo</li>
+          <li class="list-group-item"><strong>Nombre:</strong> Cody</li>
+          <li class="list-group-item"><strong>Edad:</strong> 2 meses</li>
+          <li class="list-group-item"><strong>Raza:</strong> Mestizo</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">SOY TUYO</a>
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
 
       <div class="card m-4" style="width: 18rem;">
-        <img src="../multimedia/pexels-torsten-dettlaff-59523.jpg" class="card-img-top" alt="perro5">
+        <img src="../multimedia/pexels-josh-hild-2820134.jpg" class="card-img-top" alt="perro5">
         <div class="card-body">
           <h5 class="card-title">GRUÑON</h5>
           <p class="card-text">Caracter, Temperamento, y Jugueton.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nombre: Gruñon</li>
-          <li class="list-group-item">Edad: 2 Meses </li>
-          <li class="list-group-item">Raza: Mestizo</li>
+          <li class="list-group-item"><strong>Nombre:</strong> Gruñon</li>
+          <li class="list-group-item"><strong>Edad:</strong> 2 Meses </li>
+          <li class="list-group-item"><strong>Raza:</strong> Mestizo</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">SOY TUYO</a>
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
+        </div>
+      </div>
 
+
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-evg-kowalievska-1170986.jpg" class="card-img-top" alt="gato1">
+        <div class="card-body">
+          <h5 class="card-title">TUTI</h5>
+          <p class="card-text">Energica, Atenta, Dormilona.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><strong>Nombre:</strong> Tuti</li>
+          <li class="list-group-item"><strong>Edad:</strong> 2 Años</li>
+          <li class="list-group-item"><strong>Raza:</strong> Meztizo</li>
+        </ul>
+        <div class="card-body">
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
+        </div>
+      </div>
+
+
+      <div class="card m-4" style="width: 18rem;">
+        <img src="../multimedia/pexels-pixabay-45201 (1).jpg" class="card-img-top" alt="gato2">
+        <div class="card-body">
+          <h5 class="card-title">MELI</h5>
+          <p class="card-text">Juguetona, Mordedora y Cazadora</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><strong>Nombre:</strong> Meli </li>
+          <li class="list-group-item"><strong>Edad:</strong> 6 meses </li>
+          <li class="list-group-item"><strong>Raza:</strong> Meztizo</li>
+        </ul>
+        <div class="card-body">
+          <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
     </section>
 
   </main>
   <footer>
+    <div class="redes">
+      <img src="../multimedia/facebook (1).png" alt="facebook">
+      <img src="../multimedia/instagram.png" alt="">
+      <img src="../multimedia/twitter.png" alt="">
+      <img src="../multimedia/whatsapp.png" alt="">
+    </div>
 
     <p class="piedePagina">
       Derechos Reservados |Términos y condiciones|
