--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -10,10 +10,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- APTACION A CELULAR -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- ESTILO DE LETRA ENCABEZADO-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!-- LOGO DE PESTAÑA -->
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
     <!-- ANIMACION HEADER -->
@@ -34,41 +30,33 @@
 <!-- TODO EL CONTENIDO DEL SITIO -->
 
 <body>
-
-    <header class="animate__animated animate__backInLeft">
-        <div class="logo">
-            <a href="../index.html">
-                <img src="../multimedia/glow.png" alt="logo-pagina"></a>
-        </div>
-        <nav id="menuPrincipal" class="menuPrincipal navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/adopcion.html">Adopcion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../preguntas frecuentes.html">Preguntas
-                                Frecuentes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../paginas/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+    <header class="container-fluid animate__animated animate__backInLeft">
+        <div class="container">
+            <div class="row">
+                <a href="../index.html">
+                    <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
             </div>
-        </nav>
+        </div>
+    
+        <div class="row">
+            <nav class="navbar navbar-expand-md navbar-light">
+                <div class="navPd container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav mx-auto">
+                            <a class="nav-link active mx-4" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link active mx-4" href="../paginas/adopcion.html">Adopción</a>
+                            <a class="nav-link active mx-4" href="../paginas/preguntas frecuentes.html">Preguntas Frecuentes</a>
+                            <a class="nav-link active mx-4" href="../paginas/nosotros.html">Nosotros</a>
+                            <a class="nav-link active mx-4" href="../paginas/contacto.html">Contacto</a>
+                        </div>
+                    </div>
+            </nav>
+        </div>    
     </header>
 
     <main>
@@ -80,10 +68,10 @@
 
             <div>
                 <h2 class="preguntas"> ¿QUE ES ADOPTAR?</h2>
-                <p class="respuestas">
+                <p class="respuestas"><strong>
                     La adopción de animales es el proceso de tomar la responsabilidad de un animal que un dueño
                     previamente ha
-                    abandonado o dejado en un refugio de animales.
+                    abandonado o dejado en un refugio de animales.</strong>
 
                     Existe un gran número de lugares donde se puede adoptar, tanto lugares físicos, como los refugios,
                     como por
@@ -98,10 +86,10 @@
         <article>
             <div>
                 <h2 class="preguntas">¿PORQUE ADOPTAR UNA MASCOTA?</h2>
-                <p class="respuestas">
+                <p class="respuestas"><strong>
                     Varios estudios han demostrado que tener una mascota no solo alargará tu vida, sino que también
                     aumentarán
-                    tu felicidad y mejorarán tu salud en general. Además, las mascotas ayudan a las personas con
+                    tu felicidad y mejorarán tu salud en general.</strong> Además, las mascotas ayudan a las personas con
                     depresión,
                     estrés y ansiedad.
 
@@ -112,21 +100,27 @@
         <article>
             <div>
                 <h2 class="preguntas">¿QUE SE DEBE TENER EN CUENTA A LA HORA DE ADOPTAR?</h2>
-                <p class="respuestas">
+                <p class="respuestas"><strong>
                     Qué saber antes de adoptar un cachorro
-                    Espacio y estilo de vida para el cachorro. El tamaño de la mascota y el temperamento de la raza que
+                    Espacio y estilo de vida para el cachorro. </strong> El tamaño de la mascota y el temperamento de la raza que
                     escojas
-                    son el primer factor de decisión determinante. ...
+                    son: <strong>el primer factor de decisión determinante. ...
                     Educación de un cachorro. ...
                     Cuidados de un perro cachorro. ...
                     Visitas veterinarias para tu cachorro. ...
-                    Viajes y vacaciones con tu cachorro.
+                    Viajes y vacaciones con tu cachorro.</strong> 
                 </p>
             </div>
         </article>
 
     </main>
     <footer>
+        <div class="redes">
+            <img src="../multimedia/facebook (1).png" alt="facebook">
+            <img src="../multimedia/instagram.png" alt="">
+            <img src="../multimedia/twitter.png" alt="">
+            <img src="../multimedia/whatsapp.png" alt="">
+        </div>
 
         <p class="piedePagina">
             Derechos Reservados |Términos y condiciones|
