--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
     <footer>
         <div class="redes">
-            <img src="../multimedia/facebook (1).png" alt="facebook">
-            <img src="../multimedia/instagram.png" alt="">
-            <img src="../multimedia/twitter.png" alt="">
-            <img src="../multimedia/whatsapp.png" alt="">
+            <img src="./multimedia/facebook (1).png" alt="facebook">
+            <img src="./multimedia/instagram.png" alt="">
+            <img src="./multimedia/twitter.png" alt="">
+            <img src="./multimedia/whatsapp.png" alt="">
         </div>
 
         <p class="piedePagina">
