--- a/paginas/adopcion.html
+++ b/paginas/adopcion.html
@@ -9,10 +9,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- APTACION A CELULAR -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- ESTILO DE LETRA ENCABEZADO-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
   <!-- LOGO DE PESTAÑA -->
   <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
   <!-- ANIMACION HEADER -->
@@ -36,36 +32,35 @@
 <body>
   <header class="container-fluid animate__animated animate__backInLeft">
     <div class="container">
-        <div class="row">
-            <a href="../index.html">
-                <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
-        </div>
+      <div class="row">
+        <a href="../index.html">
+          <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
+      </div>
     </div>
 
     <div class="row">
-        <nav class="navbar navbar-expand-md navbar-light">
-            <div class="navPd container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav mx-auto">
-                        <a class="nav-link active mx-4" aria-current="page" href="../index.html">Inicio</a>
-                        <a class="nav-link active mx-4" href="../paginas/adopcion.html">Adopción</a>
-                        <a class="nav-link active mx-4" href="../paginas/preguntas frecuentes.html">Preguntas Frecuentes</a>
-                        <a class="nav-link active mx-4" href="../paginas/nosotros.html">Nosotros</a>
-                        <a class="nav-link active mx-4" href="../paginas/contacto.html">Contacto</a>
-                    </div>
-                </div>
-        </nav>
+      <nav class="navbar navbar-expand-md navbar-light">
+        <div class="navPd container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav mx-auto">
+              <a class="nav-link active mx-4" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link active mx-4" href="../paginas/adopcion.html">Adopción</a>
+              <a class="nav-link active mx-4" href="../paginas/preguntas frecuentes.html">Preguntas Frecuentes</a>
+              <a class="nav-link active mx-4" href="../paginas/nosotros.html">Nosotros</a>
+              <a class="nav-link active mx-4" href="../paginas/contacto.html">Contacto</a>
+            </div>
+          </div>
+      </nav>
     </div>
-</header>
+  </header>
 
   <main class="container-fluid bg-black">
     <section class="d-flex flex-wrap col-12 justify-content-center">
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-kat-smith-551628.jpg" class="card-img-top" alt="perro1">
         <div class="card-body bg-yellow">
           <h5 class="card-title">ROGELIO</h5>
@@ -81,7 +76,7 @@
         </div>
       </div>
 
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-jens-mahnke-776078.jpg" class="card-img-top" alt="perro2">
         <div class="card-body">
           <h5 class="card-title">COKY</h5>
@@ -97,7 +92,7 @@
         </div>
       </div>
 
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-235805.jpg" class="card-img-top" alt="perro3">
         <div class="card-body">
           <h5 class="card-title">FIRULAIS</h5>
@@ -114,7 +109,7 @@
       </div>
 
       </div>
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-39317.jpg" class="card-img-top" alt="perro4">
         <div class="card-body">
           <h5 class="card-title">VERTULIO</h5>
@@ -130,7 +125,7 @@
         </div>
       </div>
 
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-glenn-2664417.jpg" class="card-img-top" alt="perro5">
         <div class="card-body">
           <h5 class="card-title">CODY</h5>
@@ -146,7 +141,7 @@
         </div>
       </div>
 
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-josh-hild-2820134.jpg" class="card-img-top" alt="perro5">
         <div class="card-body">
           <h5 class="card-title">GRUÑON</h5>
@@ -163,7 +158,7 @@
       </div>
 
 
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-evg-kowalievska-1170986.jpg" class="card-img-top" alt="gato1">
         <div class="card-body">
           <h5 class="card-title">TUTI</h5>
@@ -180,7 +175,7 @@
       </div>
 
 
-      <div class="card m-4" style="width: 18rem;">
+      <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-45201 (1).jpg" class="card-img-top" alt="gato2">
         <div class="card-body">
           <h5 class="card-title">MELI</h5>
