--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -8,10 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- APTACION A CELULAR -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- ESTILO DE LETRA ENCABEZADO-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!-- LOGO DE PESTAÑA -->
     <link rel="shortcut icon" href="../multimedia/images.png" type="image/x-icon">
     <!-- ANIMACION HEADER -->
@@ -41,7 +37,7 @@
                     <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
             </div>
         </div>
-    
+
         <div class="row">
             <nav class="navbar navbar-expand-md navbar-light">
                 <div class="navPd container-fluid">
@@ -54,55 +50,46 @@
                         <div class="navbar-nav mx-auto">
                             <a class="nav-link active mx-4" aria-current="page" href="../index.html">Inicio</a>
                             <a class="nav-link active mx-4" href="../paginas/adopcion.html">Adopción</a>
-                            <a class="nav-link active mx-4" href="../paginas/preguntas frecuentes.html">Preguntas Frecuentes</a>
+                            <a class="nav-link active mx-4" href="../paginas/preguntas frecuentes.html">Preguntas
+                                Frecuentes</a>
                             <a class="nav-link active mx-4" href="../paginas/nosotros.html">Nosotros</a>
                             <a class="nav-link active mx-4" href="../paginas/contacto.html">Contacto</a>
                         </div>
                     </div>
             </nav>
         </div>
-    
-    </header>
 
+    </header>
     <main class="bgNosotros">
         <div>
             <img src="../multimedia/perro-nieve-hoja.jpg" alt="imagen de nosotros" class="imagen3">
         </div>
-
-
         <article>
             <section class="textoNosotros">
                 <div>
                     <h2 class="tituloNosotros"> ACERCA DE NOSOTROS</h2>
                 </div>
-
                 <div>
                     <p class="textoNosotros1">
                         Somos un grupo de personas que rescata, recupera y da en adopción a perros que han sido
                         abandonados o
                         maltratados
-
                         Los curamos, les damos atención veterinaria y luego buscamos que sean adoptados por familias
                         maravillosas.
                     </p>
                 </div>
-
                 <div>
                     <h2 class="tituloNosotros">MISION</h2>
                 </div>
                 <div>
-
                     <P class="textoNosotros1">
                         Rescatar, curar, emparchar cuerpitos y almas y encontrarles los adopteros que se merecen.
                     </P>
                 </div>
-
                 <div>
-
                     <h2 class="tituloNosotros">¿QUE BUSCAMOS?</h2>
                 </div>
                 <div>
-
                     <P class="textoNosotros1">
                         Que cada uno de nuestros rescatados encuentre a su familia adoptera ideal, donde puedan recibir
                         todo
@@ -111,10 +98,8 @@
                         y cuidado que merecen.
                     </P>
                 </div>
-
                 <div>
                     <div>
-
                         <h2 class="tituloNosotros">ATENCION VETERINARIA</h2>
                     </div>
                     <P class="textoNosotros1">
@@ -124,7 +109,6 @@
                         necesiten.
                     </P>
                 </div>
-
                 <div>
                     <h2 class="tituloNosotros">LO QUE MAS DESEAMOS</h2>
                 </div>
@@ -139,8 +123,6 @@
         </article>
         </section>
     </main>
-
-
     <footer>
         <div class="redes">
             <img src="../multimedia/facebook (1).png" alt="facebook">
@@ -148,7 +130,6 @@
             <img src="../multimedia/twitter.png" alt="">
             <img src="../multimedia/whatsapp.png" alt="">
         </div>
-
         <p class="piedePagina">
             Derechos Reservados |Términos y condiciones|
             Aviso de Privacidad
@@ -163,7 +144,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-
 </body>
 
 </html>
