--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="./multimedia/Portada Facebook Perro con gafas.jpg" alt="imagenprincipal" class="imagen1">
         </div>
         <div>
-            <h2 class="tituloTexto">ADOPTA GANAMOS TODOS</h2>
+            <h2 class="tituloTexto">ADOPTANDO GANAMOS TODOS</h2>
             <p class="textoPrincipal">
                 <strong>La adopción es una alternativa que a la hora de adquirir un animal de compañía beneficia a todos: </strong>a la
                 familia, a las entidades de protección animal y, por supuesto, al propio perro o gato. Los adoptantes
@@ -83,9 +83,11 @@
                 muchos casos a ser sacrificado (12%).</strong> 
             </p>
         </div>
+        <div>
+            <h2 class="tituloVideo">COMO ADOPTAR</h2>
+        </div>
 
         <div class="video1">
-            <h2 class="tituloVideo">COMO ADOPTAR</h2>
             <iframe height="315" src="https://www.youtube.com/embed/mlfzDp9rjos" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -101,13 +103,7 @@
             <img src="./multimedia/whatsapp.png" alt="">
         </div>
 
-        <p class="piedePagina">
-            Derechos Reservados |Términos y condiciones|
-            Aviso de Privacidad
-            |Política de ADOPTAME sobre Cookies
-            |Términos y condiciones | Copyright.
-            CUIDAMOS MASCOTAS
-        </p>
+        <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
