--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -122,13 +122,7 @@
             <img src="../multimedia/whatsapp.png" alt="">
         </div>
 
-        <p class="piedePagina">
-            Derechos Reservados |Términos y condiciones|
-            Aviso de Privacidad
-            |Política de ADOPTAME sobre Cookies
-            |Términos y condiciones | Copyright.
-            CUIDAMOS MASCOTAS
-        </p>
+        <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.s</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
