--- a/paginas/adopcion.html
+++ b/paginas/adopcion.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
-
 <head>
   <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
   <meta charset="UTF-8">
@@ -26,9 +24,7 @@
   <!-- TITULO DE LA PAGINA -->
   <title>Adopcion</title>
 </head>
-
 <!-- TODO EL CONTENIDO DEL SITIO -->
-
 <body>
   <header class="container-fluid animate__animated animate__backInLeft">
     <div class="container">
@@ -37,7 +33,6 @@
           <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
       </div>
     </div>
-
     <div class="row">
       <nav class="navbar navbar-expand-md navbar-light">
         <div class="navPd container-fluid">
@@ -57,7 +52,6 @@
       </nav>
     </div>
   </header>
-
   <main class="container-fluid bg-black">
     <section class="d-flex flex-wrap col-12 justify-content-center">
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
@@ -75,7 +69,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-jens-mahnke-776078.jpg" class="card-img-top" alt="perro2">
         <div class="card-body">
@@ -91,7 +84,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-235805.jpg" class="card-img-top" alt="perro3">
         <div class="card-body">
@@ -107,7 +99,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
       </div>
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-39317.jpg" class="card-img-top" alt="perro4">
@@ -124,7 +115,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-glenn-2664417.jpg" class="card-img-top" alt="perro5">
         <div class="card-body">
@@ -140,7 +130,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-josh-hild-2820134.jpg" class="card-img-top" alt="perro5">
         <div class="card-body">
@@ -156,8 +145,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
-
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-evg-kowalievska-1170986.jpg" class="card-img-top" alt="gato1">
         <div class="card-body">
@@ -173,8 +160,6 @@
           <a href="../paginas/contacto.html" class="btn btn-primary">Contactame</a>
         </div>
       </div>
-
-
       <div class="card m-4 animate__animated animate__headShake" style="width: 18rem;">
         <img src="../multimedia/pexels-pixabay-45201 (1).jpg" class="card-img-top" alt="gato2">
         <div class="card-body">
@@ -191,16 +176,14 @@
         </div>
       </div>
     </section>
-
   </main>
   <footer>
     <div class="redes">
       <img src="../multimedia/facebook (1).png" alt="facebook">
-      <img src="../multimedia/instagram.png" alt="">
-      <img src="../multimedia/twitter.png" alt="">
-      <img src="../multimedia/whatsapp.png" alt="">
+      <img src="../multimedia/instagram.png" alt="instagram">
+      <img src="../multimedia/twitter.png" alt="twitter">
+      <img src="../multimedia/whatsapp.png" alt="whatsapp">
     </div>
-
     <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -210,5 +193,4 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
   </script>
 </body>
-
 </html>
