--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
     <header class="container-fluid animate__animated animate__backInLeft">
         <div class="container">
             <div class="row">
-                <a href="./index.html">
-                    <img class="img" src="./multimedia/glow.png" alt="logo-pagina"></a>
+                <a href="./index.html"><img class="img" src="./multimedia/glow.png" alt="logo-pagina"></a>
             </div>
         </div>
-
         <div class="row">
             <nav class="navbar navbar-expand-md navbar-light">
                 <div class="navPd container-fluid">
@@ -56,7 +54,6 @@
 
     </header>
     <main>
-
         <div>
             <img src="./multimedia/Portada Facebook Perro con gafas.jpg" alt="imagenprincipal" class="imagen1">
         </div>
@@ -86,7 +83,6 @@
         <div>
             <h2 class="tituloVideo">COMO ADOPTAR</h2>
         </div>
-
         <div class="video1">
             <iframe height="315" src="https://www.youtube.com/embed/mlfzDp9rjos" title="YouTube video player"
                 frameborder="0"
@@ -94,15 +90,13 @@
                 allowfullscreen></iframe>
         </div>
     </main>
-
     <footer>
         <div class="redes">
             <img src="./multimedia/facebook (1).png" alt="facebook">
-            <img src="./multimedia/instagram.png" alt="">
-            <img src="./multimedia/twitter.png" alt="">
-            <img src="./multimedia/whatsapp.png" alt="">
+            <img src="./multimedia/instagram.png" alt="instagram">
+            <img src="./multimedia/twitter.png" alt="twitter">
+            <img src="./multimedia/whatsapp.png" alt="whatsapp">
         </div>
-
         <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -111,8 +105,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-
 </body>
-
-
 </html>
