--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
   <meta charset="UTF-8">
@@ -25,7 +24,6 @@
   <!-- TITULO DE LA PAGINA -->
   <title>Contacto</title>
 </head>
-
 <!-- TODO EL CONTENIDO DEL SITIO -->
 <body>
   <header class="container-fluid animate__animated animate__backInLeft">
@@ -92,9 +90,9 @@
   <footer>
     <div class="redes">
       <img src="../multimedia/facebook (1).png" alt="facebook">
-      <img src="../multimedia/instagram.png" alt="">
-      <img src="../multimedia/twitter.png" alt="">
-      <img src="../multimedia/whatsapp.png" alt="">
+      <img src="../multimedia/instagram.png" alt="instagram">
+      <img src="../multimedia/twitter.png" alt="twitter">
+      <img src="../multimedia/whatsapp.png" alt="whatsapp">
     </div>
     <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.</p>
   </footer>
@@ -104,7 +102,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
   </script>
-
 </body>
-
 </html>
