--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
     <meta charset="UTF-8">
@@ -24,12 +23,9 @@
         content=" Vivimos para mejorar la vida de las mascostas abandonadas y aca encontrara la informacion de nosotros">
     <!-- TITULO DE LA PAGINA -->
     <title>Nosotros</title>
-
 </head>
 <!-- TODO EL CONTENIDO DEL SITIO -->
-
 <body>
-
     <header class="container-fluid animate__animated animate__backInLeft">
         <div class="container">
             <div class="row">
@@ -37,7 +33,6 @@
                     <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
             </div>
         </div>
-
         <div class="row">
             <nav class="navbar navbar-expand-md navbar-light">
                 <div class="navPd container-fluid">
@@ -58,7 +53,6 @@
                     </div>
             </nav>
         </div>
-
     </header>
     <main class="bgNosotros">
         <div>
@@ -126,9 +120,9 @@
     <footer>
         <div class="redes">
             <img src="../multimedia/facebook (1).png" alt="facebook">
-            <img src="../multimedia/instagram.png" alt="">
-            <img src="../multimedia/twitter.png" alt="">
-            <img src="../multimedia/whatsapp.png" alt="">
+            <img src="../multimedia/instagram.png" alt="instagram">
+            <img src="../multimedia/twitter.png" alt="twitter">
+            <img src="../multimedia/whatsapp.png" alt="whatsapp">
         </div>
         <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.</p>
     </footer>
@@ -139,5 +133,4 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
