--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
-
-
 <head>
     <!-- CARARACTERES ESPECIALES  Ñ Y TILDES -->
     <meta charset="UTF-8">
@@ -28,7 +25,6 @@
     <title>Preguntas Frecuentes</title>
 </head>
 <!-- TODO EL CONTENIDO DEL SITIO -->
-
 <body>
     <header class="container-fluid animate__animated animate__backInLeft">
         <div class="container">
@@ -36,8 +32,7 @@
                 <a href="../index.html">
                     <img class="img" src="../multimedia/glow.png" alt="logo-pagina"></a>
             </div>
-        </div>
-    
+        </div>    
         <div class="row">
             <nav class="navbar navbar-expand-md navbar-light">
                 <div class="navPd container-fluid">
@@ -54,74 +49,59 @@
                             <a class="nav-link active mx-4" href="../paginas/nosotros.html">Nosotros</a>
                             <a class="nav-link active mx-4" href="../paginas/contacto.html">Contacto</a>
                         </div>
-                    </div>
+                </div>
             </nav>
         </div>    
     </header>
-
     <main>
         <div>
             <img src="../multimedia/stock-photo-horizontal-image-businessman-wireless-headphones.jpg"
                 alt="imagen de preguntas" class="imagen2">
         </div>
         <article>
-
             <div>
                 <h2 class="preguntas"> ¿QUE ES ADOPTAR?</h2>
                 <p class="respuestas"><strong>
                     La adopción de animales es el proceso de tomar la responsabilidad de un animal que un dueño
                     previamente ha
                     abandonado o dejado en un refugio de animales.</strong>
-
                     Existe un gran número de lugares donde se puede adoptar, tanto lugares físicos, como los refugios,
                     como por
                     internet, estos sitios web tienen bases de datos de mascotas y animales albergados por personas y
                     grupos de
                     rescate y pueden ser encontrados fácilmente.
-
                 </P>
             </div>
         </article>
-
         <article>
             <div>
                 <h2 class="preguntas">¿PORQUE ADOPTAR UNA MASCOTA?</h2>
                 <p class="respuestas"><strong>
                     Varios estudios han demostrado que tener una mascota no solo alargará tu vida, sino que también
-                    aumentarán
-                    tu felicidad y mejorarán tu salud en general.</strong> Además, las mascotas ayudan a las personas con
-                    depresión,
-                    estrés y ansiedad.
-
+                    aumentarán tu felicidad y mejorarán tu salud en general.</strong> Además, las mascotas ayudan a las personas con
+                    depresión, estrés y ansiedad.
                 </p>
             </div>
         </article>
-
         <article>
             <div>
                 <h2 class="preguntas">¿QUE SE DEBE TENER EN CUENTA A LA HORA DE ADOPTAR?</h2>
                 <p class="respuestas"><strong>
                     Qué saber antes de adoptar un cachorro
-                    Espacio y estilo de vida para el cachorro. </strong> El tamaño de la mascota y el temperamento de la raza que
-                    escojas
-                    son: <strong>el primer factor de decisión determinante. ...
-                    Educación de un cachorro. ...
-                    Cuidados de un perro cachorro. ...
-                    Visitas veterinarias para tu cachorro. ...
-                    Viajes y vacaciones con tu cachorro.</strong> 
+                    Espacio y estilo de vida para el cachorro. </strong> El tamaño de la mascota y el temperamento de la raza que escojas
+                    son: <strong>el primer factor de decisión determinante. ...Educación de un cachorro. ... 
+                    Cuidados de un perro cachorro. ... Visitas veterinarias para tu cachorro. ... Viajes y vacaciones con tu cachorro.</strong> 
                 </p>
             </div>
         </article>
-
     </main>
     <footer>
         <div class="redes">
             <img src="../multimedia/facebook (1).png" alt="facebook">
-            <img src="../multimedia/instagram.png" alt="">
-            <img src="../multimedia/twitter.png" alt="">
-            <img src="../multimedia/whatsapp.png" alt="">
+            <img src="../multimedia/instagram.png" alt="instagram">
+            <img src="../multimedia/twitter.png" alt="twitter">
+            <img src="../multimedia/whatsapp.png" alt="whatsapp">
         </div>
-
         <p class="piedePagina">© Copyright-2022. Pagina realizada por Luis Mantilla.s</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -130,7 +110,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-
 </body>
-
 </html>
